# clinical-extractor2

./: .dockerignore  .env.example  .replit  AGENTS.md  AI_FEATURES_TEST_RESULTS.md  BACKEND_API_REFERENCE.md  BACKEND_INTEGRATION_IMPLEMENTATION_REPORT.md  BACKEND_MIGRATION_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CRITICAL_FIXES_IMPLEMENTATION_REPORT.md  DATA_PERSISTENCE_REPORT.md  DEPENDENCY_VULNERABILITIES.md  DEPLOYMENT_GUIDE.md  Dockerfile.frontend  Dockerfile.huggingface  E2E_TEST_FIXES.md  LICENSE  MODERNIZATION_EXECPLAN.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_IMPLEMENTATION_REPORT.md  PHASE1_QUICKSTART.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PHASE2_IMPLEMENTATION_PROGRESS.md  PHASE2_INTEGRATION_SPEC.md  PHASE3_COMPLETE.md  PHASE3_IMPLEMENTATION_REPORT.md  PHASE4_UNIFIED_CACHE_COMPLETE.md  PHASE_5_COMPLETE.md  PHASE_5_SUMMARY.txt  PRODUCTION_READINESS_ASSESSMENT.md  QUICK_WINS_IMPLEMENTATION.md  README.md  README_HUGGINGFACE.md  REORGANIZATION_SUMMARY.md  SECURITY.md  TESTING_QUICK_START.md  TYPESCRIPT_FIXES_COMPLETE.md  TYPESCRIPT_FIXES_STATUS.md  (+20 more)
archives/: README.md
attached_assets/: Pasted-INFO-Started-server-process-32087-INFO-Waiting-for-application-startup-Auto-created-d-1763692287090_1763692287090.txt  content-1763680717001.md  content-1763680830049.md  (+3 more)
backend/: .coverage  Dockerfile  fly.toml  pyproject.toml  pytest.ini  railway.toml  run_tests.sh
backend/app/: config.py  main.py  models.py
backend/app/routers/: ai.py  pdf_library.py
backend/app/services/: file_search.py  llm.py
backend/tests/: test_ai_real_llm.py  test_ai_routes.py
(+144 files in other folders)
